# SANDBOX

.NET/potion-shop/: Program.cs  README.md
.NET/potion-shop-aspnet/: README.md  potion-shop.csproj
.NET/potion-shop-aspnet-k8s/: .gitignore  Program.cs  QUICKSTART.md  README.md  potion-shop-aspnet-k8s.csproj
.NET/potion-shop-k8s/: Dockerfile  PROJECT_SUMMARY.md  README.md  potion-shop-k8s.csproj
Go/potion-shop-gin/: .gitignore  Makefile  PROJECT_SUMMARY.txt  QUICKSTART.md  README.md  go.mod  main.go  test-api.sh
Go/potion-shop-gin-k8s/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  main.go
Java/potion-shop-springboot/: .gitignore  README.md  pom.xml
Java/potion-shop-springboot-k8s/: .dockerignore  .gitignore  Dockerfile  README.md  pom.xml
Node.js/potion-shop/: README.md  package-lock.json  package.json
Node.js/potion-shop-k8s/: README.md  package.json
Node.js/potion-shop-nextjs/: README.md  package.json
Node.js/potion-shop-nextjs-k8s/: .dockerignore  Dockerfile  README.md  package.json
PHP/potion-shop-laravel/: .env.example  README.md  artisan  composer.json  phpunit.xml
PHP/potion-shop-laravel-k8s/: .dockerignore  Dockerfile  INSTALLATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  composer.json  setup.sh
Python/benson-flask-shop/: README.md
Python/benson-flask-shop-k8s/: README.md
Python/benson-potion-shop-k8s/: .dockerignore  (+2 more)
Rust/potion-shop-axum-k8s/: Cargo.toml  Dockerfile  README.md
Rust/potion-shop-axum-k8s/k8s/: deployment.yaml  service.yaml
Rust/potion-shop-axum-k8s/src/: main.rs  store.rs
(+142 files in other folders)
