[package]
name = "potion-shop-axum-k8s"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "potion-shop-axum-k8s"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["fs", "cors"] }
